--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="calc-body">
-        <div class="display">
-            1234567890
-        </div>
+        <div class="display"></div> <!--removed place holder-->
         <div class="buttons">
             <div class="numbers">1</div>
             <div class="numbers">2</div>
