--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calc-body">
-        <div class="display"></div> <!--removed place holder-->
+        <div class="display"></div>
         <div class="buttons">
             <div class="numbers">1</div>
             <div class="numbers">2</div>
