update class for equal button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="operators">*</div>
             <div class="clear">C</div>
             <div class="numbers">0</div>
-            <div class="operators">=</div>
+            <div class="equal">=</div>
             <div class="operators">/</div>
         </div>
     </div>
